--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,17 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<div class="app">
+  <nav class="main-nav">
+    <h1 class="logo">
+      {{#link-to "index"}}
+        <img src="/logo.svg" alt="Ember Library">
+        <span class="sr-only">Ember Library</span>
+      {{/link-to}}
+    </h1>
 
-{{outlet}}
+    <ul>
+      <li>{{#link-to "author"}}Authors{{/link-to}}</li>
+      <li><a href>Books</a></li>
+    </ul>
+  </nav>
+
+  <main class="app-content">{{outlet}}</main>
+</div>
