all progress upto and including vid 31

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,7 +9,7 @@
 
     <ul>
       <li>{{#link-to "author"}}Authors{{/link-to}}</li>
-      <li><a href>Books</a></li>
+      <li>{{#link-to "book"}}Books{{/link-to}}</li>
     </ul>
   </nav>
 
