--- a/app/templates/author/detail.hbs
+++ b/app/templates/author/detail.hbs
@@ -12,11 +12,37 @@
 
         <div class="actions">
           {{#link-to "author.edit" model.id class="btn-pop"}}edit{{/link-to}}
+
           <button class="btn-recessed" onClick={{action "deleteAuthor" model}}>delete</button>
         </div>
       </div>
     </div>
 
-    <div class="slide-out-content"></div>
+    <div class="slide-out-content">
+      <div class="title">
+        <h3>{{model.books.length}} Books from this author</h3>
+      </div>
+
+      <div class="actions">
+        {{#link-to "author.detail.new-book" model.id class="btn-secondary btn-add"}}
+          Add a Book
+        {{/link-to}}
+      </div>
+
+      <ul class="book-list">
+        {{#each model.books as |book|}}
+          <li class="book">
+            <p class="book-title">
+              {{#link-to "book.detail" book.id}}
+                {{book.title}}
+              {{/link-to}}
+            </p>
+            <p class="book-isbn">{{book.isbn}}</p>
+          </li>
+        {{/each}}
+      </ul>
+    </div>
   </div>
 </div>
+
+{{outlet}}
