--- a/app/templates/book/detail.hbs
+++ b/app/templates/book/detail.hbs
@@ -26,7 +26,7 @@
         <p>
           <strong>Publish Date:</strong>
 
-          {{model.publishDate}}
+          {{moment-format model.publishDate "MMMM Do YYYY"}}
         </p>
         <p>
           <strong>ISBN:</strong>
@@ -36,8 +36,6 @@
       </div>
 
     </div>
-    <div class="slide-out-content">
       {{outlet}}
     </div>
-  </div>
 </div>
