--- a/app/templates/book/detail/new-review.hbs
+++ b/app/templates/book/detail/new-review.hbs
@@ -1,5 +1,7 @@
-<div class="title">
-  <h3>New Review for {{model.book.title}}</h3>
-</div>
+<div class="slide-out-content">
+  <div class="title">
+    <h3>New Review for {{model.book.title}}</h3>
+  </div>
 
-{{review-form review=model.review book=model.book onsubmit=(action "saveReview")}}
+  {{review-form review=model.review book=model.book onsubmit=(action "saveReview")}}
+</div>
