all content upto and including video #50

--- a/app/components/nav-bar.hbs
+++ b/app/components/nav-bar.hbs
@@ -16,3 +16,9 @@
     <li>{{#link-to "login"}}Login{{/link-to}}</li>
   {{/if}}
 </ul>
+
+{{#if session.isAuthenticated}}
+  <div class="current-user">
+    Hello <strong>{{currentUser.user.username}}</strong>
+  </div>
+{{/if}}
