--- a/app/templates/author/detail.hbs
+++ b/app/templates/author/detail.hbs
@@ -16,6 +16,12 @@
           <button class="btn-recessed" onClick={{action "deleteAuthor" model}}>delete</button>
         </div>
       </div>
+      <div class="details">
+        <p>
+          <strong>Added By:</strong>
+          {{model.username}}
+        </p>
+      </div>
     </div>
 
     <div class="slide-out-content">
