--- a/app/templates/book/detail.hbs
+++ b/app/templates/book/detail.hbs
@@ -33,6 +33,10 @@
 
           {{model.isbn}}
         </p>
+        <p>
+          <strong>Added By:</strong>
+          {{model.username}}
+        </p>
       </div>
 
     </div>
