--- a/app/templates/book/detail/index.hbs
+++ b/app/templates/book/detail/index.hbs
@@ -3,9 +3,11 @@
     <h3>{{model.reviews.length}} Reviews</h3>
 
     <div class="actions">
-      {{#link-to "book.detail.new-review" model.id class="btn-secondary btn-add btn"}}
-        Add your review
-      {{/link-to}}
+      {{#if (can "create review")}}
+        {{#link-to "book.detail.new-review" model.id class="btn-secondary btn-add btn"}}
+          Add your review
+        {{/link-to}}
+      {{/if}}
     </div>
   </div>
 
